--- a/style3.css
+++ b/style3.css
@@ -9,13 +9,18 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background-color: #eeeae7;
+    width: 100%;
+    height: 200vmin;
+    background-image: url("aboutbg.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 header{
     position: sticky;
+    z-index: 5;
     top: 0;
     left: 0;
-    padding: 15px 15px 20px 100px;
+    padding: 25px 20px 20px 100px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -25,10 +30,10 @@ header{
 header #logo{
     display: inline-block;
     left: 10px;
-    top: -5px;
+    top: -10px;
     position: absolute;
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     padding-bottom: 2px;
 }
 header ul{
@@ -57,3 +62,160 @@ header h1{
     font-family: Gigi;
     color: #502c11;
 }
+.aboutus{
+    margin-top: 25px;
+    font-weight: bold;
+    color: #a56839;
+    text-shadow: 2px 2px 10px #d29a6f;
+    font-size: 40px;
+}
+.section{
+    position: absolute;
+    z-index: 2;
+    top: 280px;
+    right: 100px;
+    background-color: rgb(255, 255, 255, 0.6);
+    padding: 20px;
+    width: 400px;
+    border-radius: 10px;
+    height: 500px;
+    transition: 0.8s;
+    animation-name: slide;
+    animation-duration: 2s;
+}
+.section:hover{
+    background-color: rgb(255, 255, 255, 0.8);
+    transition: 0.8s;
+}
+.section .article2{
+    text-indent: 20px;
+    line-height: 2.5;
+    margin: 20px;
+    font-family: arial;
+}
+.integrity{
+    display: grid;
+    position: relative;
+    z-index: 3;
+    top: 700px;
+    justify-content: center;
+    grid-template-columns: auto auto;
+    grid-template-rows: 360px 370px;
+    gap: 30px;
+    padding: 40px;
+}
+.integrity div{
+    width: 100%;
+}
+.integrity div .int1{
+    width: 500px;
+    height: 700px;
+}
+.integrity .image{
+    grid-row: 1 / span 2;
+}
+.integrity .image1{
+    grid-column: 2;
+}
+.integrity div .int{
+    width: 400px;
+    height: 320px;
+}
+.integrity div article{
+    background-color: rgb(231, 197, 158, 0.8);
+    line-height: 2.5;
+    padding: 30px;
+    height: 350px;
+    width: 400px;
+}
+footer{
+    position: relative;
+    z-index: 4;
+    top: 89vmin;
+    width: 100%;
+    height: 450px;
+    background-color: #fff;
+    padding: 20px;
+}
+footer .h1{
+    margin: 8px;
+    font-size: 35px;
+    text-align: center;
+    color: #502c11;
+}
+footer div{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    gap: 20px;
+}
+footer div video{
+    margin-top: -30px;
+}
+.flip-card {
+    background-color: transparent;
+    width: 500px;
+    height: 300px;
+    perspective: 1000px;
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 5px rgba(0,0,0,0.4);
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .developer, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .developer img{
+    object-fit: cover;
+  }
+  
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+  }
+  .flip-card-back {
+    display: flex;
+    flex-direction: row;
+    margin-left: 25px;
+    padding: 30px;
+    transform: rotateY(180deg);
+  }
+  .flip-card-back a img{
+    object-fit: cover;
+    margin-top: 60px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
+  .flip-card-back a{
+    margin: 5px;
+    width: 70px;
+    color: #502c11;
+  }
+  
+  @keyframes slide {
+    from {
+        transform: translateX(50px);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+  }
